Partial fix for bug #45152: Typed text does not render in TextAreas with a horizontal scrollbar Made Reflow() invalidate the correct region during an incremental or dirty reflow. r=waterson@netscape.com